# content-validation-schemas

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: linter.yml
schemas/: animation.schema.json  assetBeard.schema.json  assetBottom.schema.json  assetCostume.schema.json  assetCustom.schema.json  assetFacewear.schema.json  assetFootwear.schema.json  assetGlasses.schema.json  assetHair.schema.json  assetHeadwear.schema.json  assetHeroAvatar.schema.json  assetNonCustomizableAvatar.schema.json  assetOutfit.schema.json  assetShirt.schema.json  assetTop.schema.json  commonMaterial.schema.json  commonMesh.schema.json  commonTexture.schema.json  commonTransforms.schema.json  customAsset.schema.json  gltf-asset.schema.json  joints.schema.json  materialNames.schema.json  meshAttributes.schema.json  meshNames.schema.json  meshTriangleCount.schema.json  scene.schema.json
src/readyplayerme/asset_validation_schemas/: animation.py  asset_glasses.py  basemodel.py  common_mesh.py  common_texture.py  common_textures.py  fields.py  material_names.py  mesh_atributes.py  mesh_triangle_count.py  scenes.py  schema_io.py  types.py  validators.py
