[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readyplayerme-asset-validation-schemas"
dynamic = ["version"]
description = 'Data models that are used to check data gathered from assets for compatibility with the Ready Player Me avatar platform.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["gltf", "3D", "json", "schema", "validation"]
authors = [
  { name = "Ready Player Me", email = "info@readyplayer.me" },
]
maintainers = [
  { name = "Olaf Haag", email = "olaf@readyplayer.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic"
]

[project.optional-dependencies]
tests = [
  "pytest",
]
dev = [
  "readyplayerme-asset-validation-schemas[tests]",
  "pre-commit",
]

[project.urls]
Documentation = "https://github.com/wolfprint3d/content-validation-schemas#readme"
Issues = "https://github.com/wolfprint3d/content-validation-schemas/issues"
Source = "https://github.com/wolfprint3d/content-validation-schemas"

[tool.hatch.version]
path = "src/readyplayerme/asset_validation_schemas/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/readyplayerme"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.3.0",
  "mypy>=1.3.0",
  "ruff>=0.0.275",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/readyplayerme/asset_validation_schemas tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = false

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["readyplayerme"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["readyplayerme/asset_validation_schemas", "tests"]
branch = true
parallel = true
omit = [
  "src/readyplayerme/asset_validation_schemas/__about__.py",
]

[tool.coverage.paths]
readyplayerme_content_validation_schemas = ["src/readyplayerme/asset_validation_schemas", "*/content-validation-schemas/src/readyplayerme/asset_validation_schemas"]
tests = ["tests", "*/content-validation-schemas/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
